--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,15 @@ envlist=
     py33-django18,
     py34-django18,
     py35-django18,
+    py36-django18,
     py27-django19,
     py34-django19,
     py35-django19,
+    py36-django19,
     py27-django110,
     py34-django110,
     py35-django110,
+    py36-django110,
 
 [testenv]
 commands=
@@ -40,6 +43,12 @@ deps=
     django>=1.8,<1.9
     unittest2
 
+[testenv:py36-django18]
+basepython=python3.6
+deps=
+    django>=1.8,<1.9
+    unittest2
+
 [testenv:py27-django19]
 basepython=python2.7
 deps=
@@ -58,6 +67,12 @@ deps=
     django>=1.9,<1.10
     unittest2
 
+[testenv:py36-django19]
+basepython=python3.6
+deps=
+    django>=1.9,<1.10
+    unittest2
+
 [testenv:py27-django110]
 basepython=python2.7
 deps=
@@ -72,6 +87,12 @@ deps=
 
 [testenv:py35-django110]
 basepython=python3.5
+deps=
+    django>=1.10,<1.11
+    unittest2
+
+[testenv:py36-django110]
+basepython=python3.6
 deps=
     django>=1.10,<1.11
     unittest2
